<resources>
    <string name="app_name">Kitsunebi</string>
    <string name="action_settings">Settings</string>
    <string name="config_preference">config_preference</string>
    <string name="preference_config_key">preference_config_key</string>
    <string name="notification_channel_id">notification_channel_id</string>
    <string name="vpn_is_running">vpn_is_running</string>
    <string name="is_enable_proxy_logging">is_enable_proxy_logging</string>
    <string name="local_dns">local_dns</string>
    <string name="is_hide_dns_logs">is_hide_dns_logs</string>
    <string name="is_enable_per_app_vpn">is_enable_per_app_vpn</string>
    <string name="per_app_mode">per_app_mode</string>
    <string name="per_app_allowed_app_list">per_app_allowed_app_list</string>
    <string name="per_app_disallowed_app_list">per_app_disallowed_app_list</string>
    <string name="allowed_list">Allowed list</string>
    <string name="disallowed_list">Disallowed list</string>
    <string name="default_config">
{\n
    \"log\": {\n
        \"loglevel\": \"warning\"\n
    },\n
    \"outbounds\": [\n
        {\n
            \"protocol\": \"vmess\",\n
            \"settings\": {\n
                \"vnext\": [\n
                    {\n
                        \"address\": \"yourserver.com\",\n
                        \"port\": 10086,\n
                        \"users\": [\n
                            {\n
                                \"alterId\": 10,\n
                                \"security\": \"chacha20-poly1305\",\n
                                \"id\": \"xxxx-xxx-xx-xx-x-xx\"\n
                            }\n
                        ]\n
                    }\n
                ]\n
            },\n
            \"streamSettings\": {\n
                \"network\": \"tcp\"\n
            },\n
            \"tag\": \"proxy\"\n
        },\n
        {\n
            \"protocol\": \"freedom\",\n
            \"settings\": {\n
                \"userLevel\": 2018,\n
                \"domainStrategy\": \"UseIP\"\n
            },\n
            \"streamSettings\": {},\n
            \"tag\": \"direct\"\n
        },\n
        {\n
            \"tag\": \"block\",\n
            \"protocol\": \"blackhole\",\n
            \"settings\": {}\n
        }\n
    ],\n
    \"policy\": {\n
        \"levels\": {\n
            \"0\": {\n
                \"uplinkOnly\": 0,\n
                \"downlinkOnly\": 0,\n
                \"connIdle\": 5,\n
                \"handshake\": 4,\n
            	\"bufferSize\": 4096\n
            },\n
            \"2018\": {\n
                \"uplinkOnly\": 0,\n
                \"downlinkOnly\": 0,\n
                \"connIdle\": 5,\n
                \"handshake\": 4,\n
            	\"bufferSize\": 4096\n
            }\n
        }\n
    },\n
    \"dns\": {\n
        \"hosts\": {\n
            \"localhost\": \"127.0.0.1\"\n
        },\n
        \"servers\": [\n
            \"223.5.5.5\",\n
            \"114.114.114.114\",\n
            {\n
                \"address\": \"8.8.8.8\",\n
                \"port\": 53,\n
                \"domains\": [\n
                    \"google\",\n
                    \"android\",\n
                    \"fbcdn\",\n
                    \"facebook\",\n
                    \"domain:fb.com\",\n
                    \"instagram\",\n
                    \"whatsapp\",\n
                    \"akamai\",\n
                    \"domain:line-scdn.net\",\n
                    \"domain:line.me\",\n
                    \"domain:naver.jp\"\n
                ]\n
            },\n
            \"8.8.4.4\"\n
        ],\n
        \"clientIp\": \"115.239.211.92\"\n
    },\n
    \"inbounds\": [],\n
    \"routing\": {\n
        \"rules\": [\n
            {\n
                \"domain\": [\n
                    \"domain:setup.icloud.com\"\n
                ],\n
                \"outboundTag\": \"proxy\",\n
                \"type\": \"field\"\n
            },\n
            {\n
                \"ip\": [\n
                    \"8.8.8.8/32\",\n
                    \"8.8.4.4/32\",\n
                    \"1.1.1.1/32\",\n
                    \"1.0.0.1/32\",\n
                    \"9.9.9.9/32\",\n
                    \"149.112.112.112/32\",\n
                    \"208.67.222.222/32\",\n
                    \"208.67.220.220/32\"\n
                ],\n
                \"outboundTag\": \"proxy\",\n
                \"type\": \"field\"\n
            },\n
            {\n
                \"ip\": [\n
                    \"geoip:cn\",\n
                    \"geoip:private\"\n
                ],\n
                \"outboundTag\": \"direct\",\n
                \"type\": \"field\"\n
            },\n
            {\n
                \"type\": \"field\",\n
                \"outboundTag\": \"direct\",\n
                \"port\": \"123\"\n
            },\n
            {\n
                \"domain\": [\n
                    \"domain:pstatp.com\",\n
                    \"domain:snssdk.com\",\n
                    \"domain:toutiao.com\",\n
                    \"domain:ixigua.com\",\n
                    \"domain:apple.com\",\n
                    \"domain:crashlytics.com\",\n
                    \"domain:icloud.com\",\n
                    \"cctv\",\n
                    \"umeng\",\n
                    \"domain:weico.cc\",\n
                    \"domain:jd.com\",\n
                    \"domain:360buy.com\",\n
                    \"domain:360buyimg.com\",\n
                    \"domain:douyu.tv\",\n
                    \"domain:douyu.com\",\n
                    \"domain:douyucdn.cn\",\n
                    \"geosite:cn\"\n
                ],\n
                \"outboundTag\": \"direct\",\n
                \"type\": \"field\"\n
            },\n
            {\n
                \"ip\": [\n
                    \"149.154.167.0/24\",\n
                    \"149.154.175.0/24\",\n
                    \"91.108.56.0/24\",\n
                    \"125.209.222.0/24\"\n
                ],\n
                \"outboundTag\": \"proxy\",\n
                \"type\": \"field\"\n
            },\n
            {\n
                \"domain\": [\n
                    \"twitter\",\n
                    \"domain:twimg.com\",\n
                    \"domain:t.co\",\n
                    \"google\",\n
                    \"domain:ggpht.com\",\n
                    \"domain:gstatic.com\",\n
                    \"domain:youtube.com\",\n
                    \"domain:ytimg.com\",\n
                    \"pixiv\",\n
                    \"domain:pximg.net\",\n
                    \"tumblr\",\n
                    \"instagram\",\n
                    \"domain:line-scdn.net\",\n
                    \"domain:line.me\",\n
                    \"domain:naver.jp\",\n
                    \"domain:facebook.com\",\n
                    \"domain:fbcdn.net\",\n
                    \"pinterest\",\n
                    \"github\",\n
                    \"dropbox\",\n
                    \"netflix\",\n
                    \"domain:medium.com\",\n
                    \"domain:fivecdm.com\"\n
                ],\n
                \"outboundTag\": \"proxy\",\n
                \"type\": \"field\"\n
            }\n
        ],\n
        \"domainStrategy\": \"IPIfNonMatch\",\n
        \"strategy\": \"rules\"\n
    }\n
}\n
    </string>
</resources>
