<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:iconSpaceReserved="false"
        android:key="@string/is_enable_proxy_logging"
        android:summary="You may want to disable logging for saving battery life."
        android:title="Enable proxy logging" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:iconSpaceReserved="false"
        android:key="@string/is_hide_dns_logs"
        android:summary="Hide DNS logs in proxy log."
        android:title="Hide DNS logs" />
    <EditTextPreference
        android:defaultValue="223.5.5.5"
        android:iconSpaceReserved="false"
        android:key="@string/local_dns"
        android:summary="DNS server that will be used by the freedom outbound (in case you are using AsIs as the freedom outbound's domain strategy) or for resolving domain names for outbound servers, and these DNS requests won't be logged to proxy log. Moreover, non A/AAAA DNS queries from the OS will also be sent to this DNS server, they will be treated as normal UDP traffic."
        android:title="Local DNS"></EditTextPreference>
</PreferenceScreen>